# rust-soundchange

./: .travis.yml  Cargo.toml  README.md  index.html  search-index.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js  trait.Show.js
implementors/core/iter/: trait.DoubleEndedIterator.js  trait.Iterator.js
implementors/core/kinds/: trait.Copy.js
implementors/core/marker/: trait.Copy.js
implementors/core/num/: trait.FromPrimitive.js
implementors/soundchange/: trait.IntoCond.js
soundchange/: enum.Cond.html  enum.Transform.html  fn.check_postfix.html  fn.check_prefix.html  fn.subst.html  index.html  macro.subst_rules!.html  stability.html  stability.json  struct.CharOf.html  struct.CharTo.html  struct.StrOf.html  struct.StrTo.html  trait.IntoCond.html  trait.IntoTransform.html  trait.Search.html
soundchange-english/: enum.Phoneme.html  index.html  stability.html  stability.json  struct.Word.html  struct.WordPhonemes.html
src/: lib.rs
src/english/: Cargo.toml  lib.rs
src/english/examples/: pronounce.rs
src/log/: lib.rs.html  macros.rs.html
src/soundchange/: lib.rs.html
src/soundchange-english/: lib.rs.html
