[package]
name = "soundchange-english"
version = "0.0.8"
authors = ["Kang Seonghoon <public+rust@mearie.org>"]

description = "Reimplementation of Mark Rosenfelder's pronunciation algorithm for English"
homepage = "https://github.com/lifthrasiir/rust-soundchange"
repository = "https://github.com/lifthrasiir/rust-soundchange"
keywords = ["linguistics", "english"]
license = "MIT"

[lib]
name = "soundchange-english"
path = "lib.rs"

[dependencies]
log = "0.2.5"

[dependencies.soundchange]
path = "../.."

